manifests/prod/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr-service
  namespace: app-tdarr
spec:
  selector:
    app: tdarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8265
  type: ClusterIP
