manifests/prod/tdarr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-ingressroute
  namespace: app-tdarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr.yourdomain.org`)
      kind: Rule
      middlewares:
        - name: auth-middleware
          namespace: kube-system
      services:
        - name: tdarr-service
          port: 80
